Html Structure created

--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
 
     <body>
         <!---------- ...Header Area... ---------->
+
+        <heade class="header_area">
+            
+        </heade>
     </body>
 </html>
