Utility Styles Added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <!---------- ...Header Area... ---------->
 
         <heade class="header_area">
-            
+            <div class="inner_header_area container">
+                <h1>Hello This is advanced html css</h1>
+            </div>
         </heade>
     </body>
 </html>
