Header Section Added

--- a/index.html
+++ b/index.html
@@ -17,10 +17,28 @@
     <body>
         <!---------- ...Header Area... ---------->
 
-        <heade class="header_area">
+        <header class="header_area">
             <div class="inner_header_area container">
-                <h1>Hello This is advanced html css</h1>
+                <div class="header_content">
+                    <div class="header_logo">
+                        <a href="#"><span>Influencer</span> products</a>
+                    </div>
+                    <nav class="header_navigation">
+                        <div class="header_menu">
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Products</a></li>
+                                <li><a href="#">Sign up</a></li>
+                                <li><a href="#">Login</a></li>
+                            </ul>
+                        </div>
+                        <div class="header_icon">
+                            <a href="#"><i class="fas fa-search"></i></a>
+                            <a href="#"><i class="fas fa-shopping-cart"></i></a>
+                        </div>
+                    </nav>
+                </div>
             </div>
-        </heade>
+        </header>
     </body>
 </html>
