Hero section Added

--- a/index.html
+++ b/index.html
@@ -40,5 +40,22 @@
                 </div>
             </div>
         </header>
+
+        <!---------- ...Hero Area... ---------->
+
+        <section class="hero_area">
+            <div class="inner_hero_area container">
+                <div class="hero_content">
+                    <div class="hero_text">
+                        <h2>Start your Journey as <span>Influencer</span></h2>
+                        <p>Find all your accessories here for becoming an Influencer. Things that you will love to have. We provide quality.</p>
+                        <a href="#">Prebook now <span><i class="fas fa-arrow-right"></i></span></a>
+                    </div>
+                    <div class="hero_feature">
+                        <img src="images/img/main-camera.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
