Client Section Adde

--- a/index.html
+++ b/index.html
@@ -57,5 +57,35 @@
                 </div>
             </div>
         </section>
+
+        <!---------- ...Client Area... ---------->
+
+        <section class="client_area">
+            <div class="inner_client_area container">
+                <div class="client_content">
+                    <div class="clients">
+                        <img src="images/logos/Alibaba.svg" alt="">
+                    </div>
+                    <div class="clients">
+                        <img src="images/logos/Amazon.svg" alt="">
+                    </div>
+                    <div class="clients">
+                        <img src="images/logos/Daraz.pk Logo.svg" alt="">
+                    </div>
+                    <div class="clients">
+                        <img src="images/logos/Ebay.svg" alt="">
+                    </div>
+                    <div class="clients">
+                        <img src="images/logos/Rakuten.svg" alt="">
+                    </div>
+                    <div class="clients">
+                        <img src="images/logos/Target.svg" alt="">
+                    </div>
+                    <div class="clients">
+                        <img src="images/logos/Walmart.svg" alt="">
+                    </div>  
+                </div>
+            </div>
+        </section>
     </body>
 </html>
