collection section structure added

--- a/index.html
+++ b/index.html
@@ -87,5 +87,224 @@
                 </div>
             </div>
         </section>
+
+        <!---------- ...Collection Area... ---------->
+
+        <section class="collection_area">
+            <div class="inner_collection_area container">
+                <div class="collection_title">
+                    <h2>Popular Collection</h2>
+                </div>
+                <div class="collection_content">
+                    <div class="collections">
+                        <div class="collection_feature">
+                            <img src="images/img/tripod.png" alt="">
+                            <h3>Flex Tripod</h3>
+                        </div>
+                        <div class="collection_description">
+                            <h4>$50.48</h4>
+                            <div class="collection_rating">
+                                <div class="stars">
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                </div>
+                                <div class="rating">
+                                    <span>4.9</span>
+                                </div>
+                            </div>
+                            <p>Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="collections">
+                        <div class="collection_feature">
+                            <img src="images/img/mic.png" alt="">
+                            <h3>microphone</h3>
+                        </div>
+                        <div class="collection_description">
+                            <h4>$120.25</h4>
+                            <div class="collection_rating">
+                                <div class="stars">
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                </div>
+                                <div class="rating">
+                                    <span>4.9</span>
+                                </div>
+                            </div>
+                            <p>Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="collections">
+                        <div class="collection_feature">
+                            <img src="images/img/airpod.png" alt="">
+                            <h3>Airbuds</h3>
+                        </div>
+                        <div class="collection_description">
+                            <h4>$100.00</h4>
+                            <div class="collection_rating">
+                                <div class="stars">
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                </div>
+                                <div class="rating">
+                                    <span>4.9</span>
+                                </div>
+                            </div>
+                            <p>Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="collections">
+                        <div class="collection_feature">
+                            <img src="images/img/drone.png" alt="">
+                            <h3>Drone</h3>
+                        </div>
+                        <div class="collection_description">
+                            <h4>$980.25</h4>
+                            <div class="collection_rating">
+                                <div class="stars">
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                </div>
+                                <div class="rating">
+                                    <span>4.9</span>
+                                </div>
+                            </div>
+                            <p>Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="collections">
+                        <div class="collection_feature">
+                            <img src="images/img/lights.png" alt="">
+                            <h3>Light Setup</h3>
+                        </div>
+                        <div class="collection_description">
+                            <h4>$1200.00</h4>
+                            <div class="collection_rating">
+                                <div class="stars">
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                </div>
+                                <div class="rating">
+                                    <span>4.9</span>
+                                </div>
+                            </div>
+                            <p>Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="collections">
+                        <div class="collection_feature">
+                            <img src="images/img/setup.png" alt="">
+                            <h3>Photoshoot set</h3>
+                        </div>
+                        <div class="collection_description">
+                            <h4>$820.40</h4>
+                            <div class="collection_rating">
+                                <div class="stars">
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                </div>
+                                <div class="rating">
+                                    <span>4.9</span>
+                                </div>
+                            </div>
+                            <p>Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="collections">
+                        <div class="collection_feature">
+                            <img src="images/img/camera.png" alt="">
+                            <h3>Vlogging Camera</h3>
+                        </div>
+                        <div class="collection_description">
+                            <h4>$1800.80</h4>
+                            <div class="collection_rating">
+                                <div class="stars">
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                </div>
+                                <div class="rating">
+                                    <span>4.9</span>
+                                </div>
+                            </div>
+                            <p>Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="collections">
+                        <div class="collection_feature">
+                            <img src="images/img/single-light.png" alt="">
+                            <h3>Green Screen</h3>
+                        </div>
+                        <div class="collection_description">
+                            <h4>$25.48</h4>
+                            <div class="collection_rating">
+                                <div class="stars">
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                </div>
+                                <div class="rating">
+                                    <span>4.9</span>
+                                </div>
+                            </div>
+                            <p>Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="collections">
+                        <div class="collection_feature">
+                            <img src="images/img/action.png" alt="">
+                            <h3>Action Camera</h3>
+                        </div>
+                        <div class="collection_description">
+                            <h4>$380.00</h4>
+                            <div class="collection_rating">
+                                <div class="stars">
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                </div>
+                                <div class="rating">
+                                    <span>4.9</span>
+                                </div>
+                            </div>
+                            <p>Wordwide shifting available
+                                Buyers protection possible!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
