--- a/index.html
+++ b/index.html
@@ -304,6 +304,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="collection_button">
+                    <a href="#">See More <span><i class="fas fa-arrow-right"></i></span></a>
+                </div>
             </div>
         </section>
     </body>
