Feature Section Added

--- a/index.html
+++ b/index.html
@@ -309,5 +309,20 @@
                 </div>
             </div>
         </section>
+
+        <section class="feature_area">
+            <div class="inner_feature_area container">
+                <div class="feature_content">
+                    <div class="feature_area_image">
+                        <img src="images/img/gear.png" alt="">
+                    </div>
+                    <div class="feature_area_text">
+                        <h2>Featured products at one place</h2>
+                        <p>Our latest gear set for your amazing Influencer experience. You will get all you necessary part or items on this set. This set will be you perfect choise. Grab them all asap.</p>
+                        <a href="#">Join Now <span><i class="fas fa-arrow-right"></i></span></a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
