--- a/index.html
+++ b/index.html
@@ -310,6 +310,8 @@
             </div>
         </section>
 
+        <!---------- ...Feature Area... ---------->
+
         <section class="feature_area">
             <div class="inner_feature_area container">
                 <div class="feature_content">
