Footer Section Added

--- a/index.html
+++ b/index.html
@@ -326,5 +326,25 @@
                 </div>
             </div>
         </section>
+
+        <!---------- ...Footer Area... ---------->
+
+        <footer class="footer_area">
+            <div class="inner_footer_area container">
+                <div class="footer_content">
+                    <h2>Influencer products</h2>
+                    <p>Copyright &copy; 2022  influencer products</p>
+                    <p>All rights reserved</p>
+                    <div class="footer_social">
+                        <ul>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
