Extra Section Addded

--- a/index.html
+++ b/index.html
@@ -327,6 +327,33 @@
             </div>
         </section>
 
+        <!---------- ...Contact Area... ---------->
+
+        <section class="contact_area">
+            <div class="inner_contact_area container">
+                <div class="contact_title">
+                    <h2>Get in Touch with us</h2>
+                </div>
+                <div class="contact_form">
+                    <form action="#">
+                        <div class="input_name">
+                            <input type="text" name="FirstName" placeholder="First Name">
+                            <input type="text" name="LastName" placeholder="Last Name">
+                        </div>
+                        <div class="input_mail">
+                            <input type="email" name="email" placeholder="Email">
+                        </div>
+                        <div class="input_msg">
+                            <textarea name="Message" placeholder="Your message here"></textarea>
+                        </div>
+                        <div class="input_submit">
+                            <button type="submit">Send Message</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+
         <!---------- ...Footer Area... ---------->
 
         <footer class="footer_area">
