--- a/index.html
+++ b/index.html
@@ -115,14 +115,13 @@
                                     <span>4.9</span>
                                 </div>
                             </div>
-                            <p>Wordwide shifting available
-                                Buyers protection possible!</p>
+                            <p>World class tripod to enhance your amazing experience!</p>
                         </div>
                     </div>
                     <div class="collections">
                         <div class="collection_feature">
                             <img src="images/img/mic.png" alt="">
-                            <h3>microphone</h3>
+                            <h3>Microphone</h3>
                         </div>
                         <div class="collection_description">
                             <h4>$120.25</h4>
@@ -138,8 +137,7 @@
                                     <span>4.9</span>
                                 </div>
                             </div>
-                            <p>Wordwide shifting available
-                                Buyers protection possible!</p>
+                            <p>Fast class microphone that will help to record the real you.</p>
                         </div>
                     </div>
                     <div class="collections">
@@ -161,8 +159,7 @@
                                     <span>4.9</span>
                                 </div>
                             </div>
-                            <p>Wordwide shifting available
-                                Buyers protection possible!</p>
+                            <p>High quality air buds that will let you hear the origin of sound.</p>
                         </div>
                     </div>
                     <div class="collections">
@@ -184,8 +181,7 @@
                                     <span>4.9</span>
                                 </div>
                             </div>
-                            <p>Wordwide shifting available
-                                Buyers protection possible!</p>
+                            <p>Experience the amazing taste of flying with our super modern drone!</p>
                         </div>
                     </div>
                     <div class="collections">
@@ -207,8 +203,7 @@
                                     <span>4.9</span>
                                 </div>
                             </div>
-                            <p>Wordwide shifting available
-                                Buyers protection possible!</p>
+                            <p>Be more visible with the power of this powerfull lights. Be the brightest.</p>
                         </div>
                     </div>
                     <div class="collections">
@@ -230,8 +225,7 @@
                                     <span>4.9</span>
                                 </div>
                             </div>
-                            <p>Wordwide shifting available
-                                Buyers protection possible!</p>
+                            <p>Enhance you photoshoot experience with the help of this special shooting setup.</p>
                         </div>
                     </div>
                     <div class="collections">
@@ -253,8 +247,7 @@
                                     <span>4.9</span>
                                 </div>
                             </div>
-                            <p>Wordwide shifting available
-                                Buyers protection possible!</p>
+                            <p>Capture the real moment with this special vlogging camera.Capture the real you.</p>
                         </div>
                     </div>
                     <div class="collections">
@@ -276,8 +269,7 @@
                                     <span>4.9</span>
                                 </div>
                             </div>
-                            <p>Wordwide shifting available
-                                Buyers protection possible!</p>
+                            <p>Feel like invisible with thi supre green screen. Capture what matters.</p>
                         </div>
                     </div>
                     <div class="collections">
@@ -299,8 +291,7 @@
                                     <span>4.9</span>
                                 </div>
                             </div>
-                            <p>Wordwide shifting available
-                                Buyers protection possible!</p>
+                            <p>Enjoy the tour and capture with you need with this action camera.</p>
                         </div>
                     </div>
                 </div>
