Website Responsive Completed

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
         <!----- Style Sheet ----->
         <link rel="stylesheet" href="styles/style.css">
+        <!---- Responsive Sheet ---->
+        <link rel="stylesheet" href="styles/responsive.css">
     </head>
 
     <body>
@@ -350,7 +352,7 @@
         <footer class="footer_area">
             <div class="inner_footer_area container">
                 <div class="footer_content">
-                    <h2>Influencer products</h2>
+                    <h2>Influencer <span>products</span></h2>
                     <p>Copyright &copy; 2022  influencer products</p>
                     <p>All rights reserved</p>
                     <div class="footer_social">
